--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,9 @@ body {
   /* The html and body elements cannot have any padding or margin. */
 }
 
+
+body { padding-top: 30px; }
+
 .container {
   max-width: 970px !important;
 }
@@ -32,7 +35,7 @@ body {
   min-height: 100%;
   height: auto;
   /* Negative indent footer by its height */
-  margin: 0 auto -200px;
+  margin: 0 auto -180px;
   padding: 0 0 200px;
   /* Pad bottom by footer height */
 }
