--- a/css/index.css
+++ b/css/index.css
@@ -49,9 +49,19 @@ body { padding-top: 30px; }
   max-width: 100%;
 }
 
-#nav-scrolled {
+#button-menu-scroll {
+  z-index : 1000;
+  position: fixed;
+  margin-left: 10px;
+}
+
+#menu-scroll {
+  margin-left:40px;
+  display: none;
   position: fixed;
   z-index: 1000;
+  background-color: #f5f5f5;
+  border-radius: 4px;
 }
 
 
