--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,11 @@ body {
 
 body { padding-top: 30px; }
 
+p {
+  font-size: 16px;
+  line-height: none;
+}
+
 .container {
   max-width: 970px !important;
 }
@@ -50,6 +55,7 @@ body { padding-top: 30px; }
 }
 
 #button-menu-scroll {
+
   z-index : 1000;
   position: fixed;
   margin-left: 10px;
@@ -61,7 +67,6 @@ body { padding-top: 30px; }
   position: fixed;
   z-index: 1000;
   background-color: #f5f5f5;
-  border-radius: 4px;
 }
 
 
