--- a/css/index.css
+++ b/css/index.css
@@ -1,19 +1,13 @@
 html,
 body {
   height: 100%;
-  /* The html and body elements cannot have any padding or margin. */
 }
-
 
 body { padding-top: 30px; }
 
 p {
   font-size: 16px;
   line-height: none;
-}
-
-.container {
-  max-width: 970px !important;
 }
 
 .ruby-color {
@@ -40,34 +34,18 @@ p {
 .wrap {
   min-height: 100%;
   height: auto;
-  /* Negative indent footer by its height */
-  margin: 0 auto -180px;
+  margin: 0 auto -135px;
   padding: 0 0 200px;
-  /* Pad bottom by footer height */
 }
 
-/* Set the fixed height of the footer here */
 .slider {
   background-color: #1ABC9C;
 }
 
-#test {
-  max-width: 100%;
+.ruby-logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto }
 }
-
-#button-menu-scroll {
-  z-index : 1000;
-  position: fixed;
-  margin-left: 10px;
-}
-
-#menu-scroll {
-  margin-left:40px;
-  display: none;
-  position: fixed;
-  z-index: 1000;
-  background-color: #f5f5f5;
-}
-
 
 
